--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luiz Godoy</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -18,14 +18,48 @@
           <div class="line3"></div>
         </div>
         <ul class="nav-list">
-          <li><a href="#">Início</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Projetos</a></li>
-          <li><a href="#">Contato</a></li>
+          <!-- <li><a href="#start">Início</a></li> -->
+          <li><a href="#about">Sobre</a></li>
+          <li><a href="#projects">Projetos</a></li>
+          <li><a href="#contact">Contato</a></li>
         </ul>
       </nav>
     </header>
+    <!-- <section class="start" id="start">
+      <div>
+
+      </div>
+      </p>
+    </section> -->
+
+    <section class="about" id="about">
+      <div>
+
+      </div>
+      </p>
+    </section>
+
+    <section class="projects" id="projects">
+      <div>
+        
+      </div>
+      </p>
+    </section>
+
+    <section class="contact" id="contact">
+      <div>
+        
+      </div>
+      </p>
+    </section>
+    <i class="scroll-up up-arrow-animation" id="scroll-up"
+     ><img
+       src="/assets/images/icons8-upward-arrow-66.png"
+       class="socicon up-arrow"
+       alt="up-arrow"
+/></i>
     <main></main>
     <script src="mobile-navbar.js"></script>
+    <footer>&copy;2022. All Rights Reserved</footer>
   </body>
 </html>
